--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,7 +21,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@wiki-pages/*": ["./src/*"]
+      "@wiki-pages/*": ["./src/*"],
+      "@server/*": ["../server/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
